--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -178,11 +178,25 @@
         <a href="#" class="nav-link" onclick="switchTab('reports')">
           <i class="fas fa-file-contract"></i> Reports
         </a>
-        <a href="#" class="nav-link" onclick="switchTab('settings')">
-          <i class="fas fa-cog"></i> Settings
+
+        <div
+          style="margin: 25px 0 10px 15px; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; color: var(--primary); font-weight: 800; opacity: 0.8;">
+          Intelligence</div>
+        <a href="#" class="nav-link" onclick="switchTab('pulse')">
+          <i class="fas fa-satellite-dish"></i> Security Pulse
         </a>
-        <a href="#" class="nav-link" onclick="switchTab('profile')">
-          <i class="fas fa-user-circle"></i> Profile
+        <a href="#" class="nav-link" onclick="switchTab('ailab')">
+          <i class="fas fa-brain"></i> AI Lab
+        </a>
+        <a href="#" class="nav-link" onclick="switchTab('automation')">
+          <i class="fas fa-flask"></i> Automation Lab
+        </a>
+
+        <div
+          style="margin: 25px 0 10px 15px; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; color: var(--secondary); font-weight: 800; opacity: 0.8;">
+          Archives</div>
+        <a href="#" class="nav-link" onclick="switchTab('vault')">
+          <i class="fas fa-shield-halved"></i> Audit Vault
         </a>
       </nav>
     </aside>
@@ -218,9 +232,8 @@
                 </div>
               </div>
               <div class="dropdown-items">
-                <div class="info-text" style="padding: 10px; color: var(--text-muted); font-size: 0.8rem;">
-                  Manage your account settings from the sidebar.
-                </div>
+                <a href="#" onclick="switchTab('profile')"><i class="fas fa-user-circle"></i> Profile</a>
+                <a href="#" onclick="switchTab('settings')"><i class="fas fa-cog"></i> Settings</a>
                 <div class="divider"></div>
                 <a href="#" onclick="logout()" class="danger-item"><i class="fas fa-sign-out-alt"></i> Logout</a>
               </div>
