--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -59,7 +59,7 @@
       <div class="chat-header"
         style="display: flex; align-items: center; justify-content: space-between; background: #000; border-bottom: 2px solid #ff0000; padding: 10px 15px;">
         <div style="display: flex; align-items: center; gap: 10px;">
-          <img src="img/autobot_logo.png" style="width: 25px; height: 25px; filter: drop-shadow(0 0 5px #ff0000);">
+          <div class="autobot-logo-animated" style="width: 25px; height: 25px;"></div>
           <h3 style="margin: 0; font-size: 1rem; color: white; letter-spacing: 1px;">PRIME_AI v6.5</h3>
         </div>
         <i class="fas fa-times" style="cursor:pointer; color: #888;" onclick="toggleChat()"></i>
@@ -80,8 +80,7 @@
     </div>
 
     <div class="chat-fab" onclick="toggleChat()" title="PRIME_AI">
-      <img src="img/autobot_logo.png"
-        style="width: 40px; height: 40px; border-radius: 50%; border: 2px solid #ff0000; padding: 5px; background: #000; box-shadow: 0 0 15px rgba(255,0,0,0.5);">
+      <div class="autobot-logo-animated" style="width: 45px; height: 45px;"></div>
     </div>
   </div>
 
@@ -109,13 +108,8 @@
     <div class="bg-particle p2"></div>
 
     <div class="login-card">
-      <div class="logo-area">
-        <svg viewBox="0 0 100 100"
-          style="width: 60px; height: 60px; margin-bottom: 20px; filter: drop-shadow(0 0 15px rgba(255, 0, 0, 0.4));">
-          <path fill="#ff0000" d="M50 5 L85 20 L85 45 L75 55 L75 85 L50 98 L25 85 L25 55 L15 45 L15 20 Z" />
-          <path fill="#ffffff" opacity="0.9"
-            d="M30 25 L45 25 L45 35 L30 35 Z M55 25 L70 25 L70 35 L55 35 Z M35 50 L45 50 L45 75 L35 65 Z M55 50 L65 50 L65 65 L55 75 Z M45 80 L55 80 L50 90 Z" />
-        </svg>
+      <div class="logo-area" style="display: flex; flex-direction: column; align-items: center;">
+        <div class="autobot-logo-animated" style="width: 80px; height: 80px; margin-bottom: 20px;"></div>
         <h1>Sentinel<span style="color:var(--primary)">X</span></h1>
         <p style="letter-spacing: 2px; text-transform: uppercase; font-size: 0.75rem; color: #888;">Enterprise IT
           Infrastructure Monitoring</p>
@@ -168,12 +162,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-header" style="display: flex; align-items: center; gap: 12px; margin-bottom: 40px;">
-        <svg viewBox="0 0 100 100"
-          style="width: 32px; height: 32px; filter: drop-shadow(0 0 8px rgba(255, 0, 0, 0.4));">
-          <path fill="#ff0000" d="M50 5 L85 20 L85 45 L75 55 L75 85 L50 98 L25 85 L25 55 L15 45 L15 20 Z" />
-          <path fill="#ffffff" opacity="0.9"
-            d="M30 25 L45 25 L45 35 L30 35 Z M55 25 L70 25 L70 35 L55 35 Z M35 50 L45 50 L45 75 L35 65 Z M55 50 L65 50 L65 65 L55 75 Z M45 80 L55 80 L50 90 Z" />
-        </svg>
+        <div class="autobot-logo-animated" style="width: 32px; height: 32px;"></div>
         <h2 style="margin:0; font-size: 1.4rem;">Sentinel<span style="color:var(--primary)">X</span></h2>
       </div>
       <nav>
