--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -56,8 +56,7 @@
   <!-- ================== AI CHAT WIDGET ================== -->
   <div class="chat-widget" id="main-chat-widget" style="display: none;">
     <div class="chat-window" id="chat-window">
-      <div class="chat-header"
-        style="display: flex; align-items: center; justify-content: space-between; background: #000; border-bottom: 2px solid #ff0000; padding: 10px 15px;">
+      <div class="chat-header">
         <div style="display: flex; align-items: center; gap: 10px;">
           <div class="autobot-logo-animated" style="width: 25px; height: 25px;"></div>
           <h3 style="margin: 0; font-size: 1rem; color: white; letter-spacing: 1px;">PRIME_AI v6.5</h3>
