Created dedicated Bot Profile view and integrated animated logo into chatbot messages

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -65,8 +65,10 @@
       </div>
       <div class="chat-body" id="chat-body">
         <div class="message msg-ai">
-          Greetings. I am PRIME_AI v6.0. My neural matrix is optimized for infrastructure sovereignty. How can I assist,
-          Prime?
+          <div class="autobot-logo-animated"
+            style="width: 18px; height: 18px; margin-right: 8px; vertical-align: middle;"></div>
+          <span>Greetings. I am PRIME_AI v6.5. My neural matrix is optimized for infrastructure sovereignty. How can I
+            assist, Prime?</span>
         </div>
 
       </div>
@@ -189,6 +191,9 @@
           Intelligence</div>
         <a href="#" class="nav-link" onclick="switchTab('pulse')">
           <i class="fas fa-satellite-dish"></i> Security Pulse
+        </a>
+        <a href="#" class="nav-link" onclick="switchTab('botprofile')">
+          <i class="fas fa-id-card"></i> Bot Profile
         </a>
         <a href="#" class="nav-link" onclick="switchTab('ailab')">
           <i class="fas fa-brain"></i> AI Lab
