SentinelX Professional v6.5: Comprehensive system update including AI service integration, security enhancements, and UI refinements

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -58,7 +58,10 @@
     <div class="chat-window" id="chat-window">
       <div class="chat-header">
         <div style="display: flex; align-items: center; gap: 10px;">
-          <div class="autobot-logo-neon" style="width: 25px; height: 25px;"></div>
+          <div class="chat-bot-icon"
+            style="width: 25px; height: 25px; display: flex; align-items: center; justify-content: center; background: rgba(var(--primary-rgb), 0.1); border-radius: 50%; border: 1px solid rgba(var(--primary-rgb), 0.3);">
+            <i class="fas fa-robot" style="font-size: 0.8rem; color: var(--primary);"></i>
+          </div>
           <h3 style="margin: 0; font-size: 1rem; color: white; letter-spacing: 1px;"><span
               class="font-transformers">PRIME_AI</span> v6.5</h3>
         </div>
@@ -66,7 +69,9 @@
       </div>
       <div class="chat-body" id="chat-body">
         <div class="message msg-ai">
-          <div class="autobot-logo-neon" style="width: 18px; height: 18px; margin-right: 8px; vertical-align: middle;">
+          <div class="chat-bot-icon"
+            style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle; display: inline-flex; align-items: center; justify-content: center; background: rgba(var(--primary-rgb), 0.1); border-radius: 50%; border: 1px solid rgba(var(--primary-rgb), 0.3);">
+            <i class="fas fa-robot" style="font-size: 0.6rem; color: var(--primary);"></i>
           </div>
           <span>Greetings. I am <span class="font-transformers">PRIME_AI</span> v6.5. My neural matrix is optimized for
             infrastructure sovereignty. How can I
@@ -83,7 +88,8 @@
     </div>
 
     <div class="chat-fab" onclick="toggleChat()" title="PRIME_AI">
-      <div class="autobot-logo-neon" style="width: 45px; height: 45px;"></div>
+      <img src="img/autobot_logo.png"
+        style="width: 45px; height: 45px; object-fit: contain; filter: drop-shadow(0 0 10px rgba(0, 242, 255, 0.5));">
     </div>
   </div>
 
@@ -112,7 +118,7 @@
 
     <div class="login-card">
       <div class="logo-area" style="display: flex; flex-direction: column; align-items: center;">
-        <div class="autobot-logo-neon" style="width: 80px; height: 80px; margin-bottom: 20px;"></div>
+        <img src="img/autobot_logo.png" style="width: 80px; height: 80px; margin-bottom: 20px; object-fit: contain;">
         <h1>Sentinel<span style="color:var(--primary)">X</span></h1>
         <p style="letter-spacing: 2px; text-transform: uppercase; font-size: 0.75rem; color: #888;">Enterprise IT
           Infrastructure Monitoring</p>
@@ -165,7 +171,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
       <div class="sidebar-header" style="display: flex; align-items: center; gap: 12px; margin-bottom: 40px;">
-        <div class="autobot-logo-neon" style="width: 32px; height: 32px;"></div>
+        <img src="img/autobot_logo.png" style="width: 32px; height: 32px; object-fit: contain;">
         <h2 style="margin:0; font-size: 1.4rem;">Sentinel<span style="color:var(--primary)">X</span></h2>
       </div>
       <nav>
@@ -232,7 +238,7 @@
           <div class="profile-wrapper" style="position: relative;">
             <div class="user-profile" onclick="toggleProfileMenu()">
               <div class="avatar" style="background: transparent; border: 1px solid rgba(var(--primary-rgb), 0.3);">
-                <div class="autobot-logo-neon" style="width: 22px; height: 22px;"></div>
+                <img src="img/autobot_logo.png" style="width: 22px; height: 22px; object-fit: contain;">
               </div>
               <span>Admin</span>
               <i class="fas fa-chevron-down" id="profile-chevron"
@@ -244,7 +250,7 @@
               <div class="dropdown-header-info">
                 <div class="avatar large"
                   style="background: transparent; border: 1px solid rgba(var(--primary-rgb), 0.3);">
-                  <div class="autobot-logo-neon" style="width: 40px; height: 40px;"></div>
+                  <img src="img/autobot_logo.png" style="width: 40px; height: 40px; object-fit: contain;">
                 </div>
                 <div class="info-text">
                   <h4>Sentinel Admin</h4>
