--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -18,11 +18,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/variables.css?v=2">
-  <link rel="stylesheet" href="css/login.css?v=2">
-  <link rel="stylesheet" href="css/dashboard.css?v=2">
-  <link rel="stylesheet" href="css/chat.css?v=2">
-  <link rel="stylesheet" href="logo/intro.css?v=2">
+  <!-- Styles -->
+  <link rel="stylesheet" href="css/variables.css?v=3">
+  <link rel="stylesheet" href="css/login.css?v=3">
+  <link rel="stylesheet" href="css/dashboard.css?v=3">
+  <link rel="stylesheet" href="css/chat.css?v=3">
+  <link rel="stylesheet" href="logo/intro.css?v=3">
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Report Generation Libraries -->
@@ -150,7 +151,7 @@
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-input" placeholder="••••••••">
+          <input type="password" class="form-input" placeholder="********">
         </div>
         <button type="submit" class="btn-primary">Register Client</button>
       </form>
