Add PowerBI Intelligence feature with interactive charts and slicers

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -194,6 +194,9 @@
         <a href="#" class="nav-link" onclick="switchTab('reports')">
           <i class="fas fa-file-contract"></i> Reports
         </a>
+        <a href="#" class="nav-link" onclick="switchTab('powerbi')">
+          <i class="fas fa-chart-pie"></i> PowerBI Intelligence
+        </a>
 
         <div
           style="margin: 25px 0 10px 15px; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; color: var(--primary); font-weight: 800; opacity: 0.8;">
