Implement Role-Based Access Control, refine UI features, and integrate Python automation service

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -74,9 +74,7 @@
             style="width: 20px; height: 20px; margin-right: 8px; vertical-align: middle; display: inline-flex; align-items: center; justify-content: center; background: rgba(var(--primary-rgb), 0.1); border-radius: 50%; border: 1px solid rgba(var(--primary-rgb), 0.3);">
             <i class="fas fa-robot" style="font-size: 0.6rem; color: var(--primary);"></i>
           </div>
-          <span>Greetings. I am <span class="font-transformers">PRIME_AI</span> v6.5. My neural matrix is optimized for
-            infrastructure sovereignty. How can I
-            assist, Prime?</span>
+          <span>Greetings. I am <span class="font-transformers">PRIME_AI</span>, how can I assist you?</span>
         </div>
 
       </div>
@@ -194,8 +192,9 @@
         <a href="#" class="nav-link" onclick="switchTab('reports')">
           <i class="fas fa-file-contract"></i> Reports
         </a>
-        <a href="#" class="nav-link" onclick="switchTab('powerbi')">
-          <i class="fas fa-chart-pie"></i> PowerBI Intelligence
+        <a href="javascript:void(0)" class="nav-link" onclick="switchTab('powerbi')">
+          <i class="fas fa-chart-pie"></i>
+          <span>BI Charts</span>
         </a>
 
         <div
@@ -204,14 +203,14 @@
         <a href="#" class="nav-link" onclick="switchTab('pulse')">
           <i class="fas fa-satellite-dish"></i> Security Pulse
         </a>
-        <a href="#" class="nav-link" onclick="switchTab('botprofile')">
-          <i class="fas fa-id-card"></i> Bot Profile
-        </a>
         <a href="#" class="nav-link" onclick="switchTab('ailab')">
           <i class="fas fa-brain"></i> AI Lab
         </a>
         <a href="#" class="nav-link" onclick="switchTab('automation')">
           <i class="fas fa-flask"></i> Automation Lab
+        </a>
+        <a href="#" class="nav-link" onclick="switchTab('botprofile')">
+          <i class="fas fa-id-card"></i> Bot Profile
         </a>
 
         <div
