--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -126,11 +126,12 @@
       <form id="login-form" style="display: block;">
         <div class="form-group">
           <label>Email Address</label>
-          <input type="email" class="form-input" placeholder="Admin@senitnelX.com" value="Admin@senitnelX.com">
+          <input type="email" class="form-input" placeholder="Superadmin@SentinelX.com"
+            value="Superadmin@SentinelX.com">
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" class="form-input" placeholder="••••••••" value="SentinelXadmin007">
+          <input type="password" class="form-input" placeholder="••••••••" value="12345SuperAdmin!">
         </div>
 
         <button type="submit" class="btn-primary" id="login-btn">Authenticate</button>
@@ -169,9 +170,16 @@
   <section id="dashboard-view" style="display: none;">
     <!-- Sidebar -->
     <aside class="sidebar">
-      <div class="sidebar-header" style="display: flex; align-items: center; gap: 12px; margin-bottom: 40px;">
-        <img src="img/autobot_logo.png" style="width: 32px; height: 32px; object-fit: contain;">
-        <h2 style="margin:0; font-size: 1.4rem;">Sentinel<span style="color:var(--primary)">X</span></h2>
+      <div class="sidebar-header"
+        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 40px;">
+        <div style="display: flex; align-items: center; gap: 12px;">
+          <img src="img/autobot_logo.png" style="width: 32px; height: 32px; object-fit: contain;">
+          <h2 style="margin:0; font-size: 1.4rem;">Sentinel<span style="color:var(--primary)">X</span></h2>
+        </div>
+        <button class="icon-btn mobile-menu-btn" onclick="toggleMobileSidebar()"
+          style="display: none; border: none; background: transparent; color: var(--text-muted);">
+          <i class="fas fa-times"></i>
+        </button>
       </div>
       <nav>
         <a href="#" class="nav-link active" onclick="switchTab('home')">
@@ -197,7 +205,7 @@
           <span>BI Charts</span>
         </a>
 
-        <div
+        <div class="intel-governance"
           style="margin: 25px 0 10px 15px; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 1.5px; color: var(--primary); font-weight: 800; opacity: 0.8;">
           Intelligence</div>
         <a href="#" class="nav-link" onclick="switchTab('pulse')">
@@ -225,7 +233,12 @@
     <!-- Main Content -->
     <main class="main-content">
       <header class="topbar">
-        <div class="page-title" id="page-title">System Overview</div>
+        <div style="display: flex; align-items: center; gap: 15px;">
+          <button class="icon-btn mobile-menu-btn" onclick="toggleMobileSidebar()" style="display: none;">
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="page-title" id="page-title">System Overview</div>
+        </div>
         <div class="user-actions">
           <button class="icon-btn" id="theme-toggle-btn" title="Toggle Theme">
             <i class="fas fa-moon"></i>
@@ -242,7 +255,7 @@
               <div class="avatar" style="background: transparent; border: 1px solid rgba(var(--primary-rgb), 0.3);">
                 <img src="img/autobot_logo.png" style="width: 22px; height: 22px; object-fit: contain;">
               </div>
-              <span>Admin</span>
+              <span>Super Admin</span>
               <i class="fas fa-chevron-down" id="profile-chevron"
                 style="font-size: 0.8rem; margin-left: 5px; transition: transform 0.3s;"></i>
             </div>
@@ -255,8 +268,8 @@
                   <img src="img/autobot_logo.png" style="width: 40px; height: 40px; object-fit: contain;">
                 </div>
                 <div class="info-text">
-                  <h4>Sentinel Admin</h4>
-                  <span>Admin@senitnelX.com</span>
+                  <h4>Sentinel Super Admin</h4>
+                  <span>Superadmin@SentinelX.com</span>
                 </div>
               </div>
               <div class="dropdown-items">
