--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -19,7 +19,7 @@
 
   <!-- Styles -->
   <!-- Styles -->
-  <link rel="stylesheet" href="css/variables.css?v=3">
+  <link rel="stylesheet" href="css/variables.css?v=4">
   <link rel="stylesheet" href="css/login.css?v=3">
   <link rel="stylesheet" href="css/dashboard.css?v=3">
   <link rel="stylesheet" href="css/chat.css?v=3">
@@ -124,6 +124,8 @@
       </div>
 
       <form id="login-form" style="display: block;">
+        <div class="card-title font-transformers"
+          style="margin-bottom: 20px; color: var(--primary); text-align: center;">System Access</div>
         <div class="form-group">
           <label>Email Address</label>
           <input type="email" class="form-input" placeholder="Superadmin@SentinelX.com"
@@ -134,29 +136,68 @@
           <input type="password" class="form-input" placeholder="••••••••" value="12345SuperAdmin!">
         </div>
 
-        <button type="submit" class="btn-primary" id="login-btn">Authenticate</button>
+        <button type="submit" class="btn-primary" id="login-btn">Secure Login</button>
       </form>
-
 
       <form id="register-form" style="display: none;">
+        <div class="card-title font-transformers"
+          style="margin-bottom: 20px; color: var(--secondary); text-align: center;">New Registration</div>
+        <div id="register-inputs">
+          <div class="form-group">
+            <label>Full Name</label>
+            <input type="text" class="form-input" placeholder="John Doe">
+          </div>
+          <div class="form-group">
+            <label>Email Address</label>
+            <input type="email" class="form-input" placeholder="client@example.com">
+          </div>
+          <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-input" placeholder="********">
+          </div>
+          <button type="submit" class="btn-primary"
+            style="background: var(--secondary); border-color: var(--secondary);">Request Access Code</button>
+        </div>
 
-        <div class="form-group">
-          <label>Full Name</label>
-          <input type="text" class="form-input" placeholder="John Doe">
+        <!-- OTP Verification Layer -->
+        <div id="otp-verification" style="display: none; text-align: center;">
+          <div style="font-size: 3rem; color: var(--secondary); margin-bottom: 15px;">
+            <i class="fas fa-shield-alt"></i>
+          </div>
+          <p style="font-size: 0.85rem; color: #888; margin-bottom: 20px;">
+            A Quantum-OTP has been sent to your email sync-port.
+            Please enter the 6-digit verification sequence.
+          </p>
+          <div class="form-group">
+            <input type="text" id="otp-input" class="form-input" maxlength="6" placeholder="000000"
+              style="text-align: center; font-size: 1.5rem; letter-spacing: 12px; font-family: var(--font-mono);">
+          </div>
+          <button type="button" class="btn-primary" onclick="verifyOTP()"
+            style="background: #00ff88; color: black; border: none;">Verify & Proceed</button>
+          <p style="margin-top: 15px; font-size: 0.75rem; cursor: pointer; color: var(--secondary);"
+            onclick="resetRegister()">Back to details</p>
         </div>
-        <div class="form-group">
-          <label>Email Address</label>
-          <input type="email" class="form-input" placeholder="client@example.com">
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="password" class="form-input" placeholder="********">
-        </div>
-        <button type="submit" class="btn-primary">Register Client</button>
       </form>
 
-      <div style="text-align:center; margin-top:15px;">
-        <a href="#" id="toggle-auth" style="color:var(--primary); text-decoration:none;">Need an account? Register</a>
+      <!-- Security Layer: Scan UI -->
+      <div id="security-layer" class="security-overlay">
+        <div class="scanner-area">
+          <div class="scan-line"></div>
+          <div
+            style="position: absolute; top:50%; left:50%; transform:translate(-50%, -50%); opacity:0.1; font-size: 8rem;">
+            <i class="fas fa-fingerprint"></i>
+          </div>
+        </div>
+        <div class="security-text font-transformers">
+          VERIFYING NEURAL SIGNATURE...<br>
+          <span id="security-step" style="font-size: 0.7rem; color: #888;">Initializing Deep Packet Inspection</span>
+        </div>
+        <div id="security-log" class="security-log"></div>
+      </div>
+
+      <div style="text-align:center; margin-top:20px;">
+        <a href="#" id="toggle-auth" style="color:var(--primary); text-decoration:none; font-size: 0.9rem;">Need an
+          account? Sign UP</a>
       </div>
 
       <div class="login-footer">
@@ -164,6 +205,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- ================== DASHBOARD VIEW ================== -->
   <!-- Initially Hidden -->
@@ -238,6 +280,10 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="page-title" id="page-title">System Overview</div>
+          <div class="neural-status" id="neural-pulse">
+            <div class="pulse-dot"></div>
+            <span>NEURAL_LINK: STABLE</span>
+          </div>
         </div>
         <div class="user-actions">
           <button class="icon-btn" id="theme-toggle-btn" title="Toggle Theme">
